tests/snapshots/tokenize__asm_simple.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nint at 3:5\nIdentifier(result) at 3:9\n= at 3:16\nIntLiteral(42, None) at 3:18\n; at 3:20\nasm at 4:5\n( at 4:8\nStringLiteral(\"movq $10, %rax\") at 4:9\n) at 4:25\n; at 4:26\nreturn at 5:5\nIntLiteral(0, None) at 5:12\n; at 5:13\n} at 6:1\nEOF at 7:1\n"
stderr: ""
status: 0
