tests/snapshots/tokenize__assert_test.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "extern at 16:5\nvoid at 16:12\nIdentifier(__assert_fail) at 16:17\n( at 16:30\nchar at 16:31\n* at 16:36\nIdentifier(assertion) at 16:37\n, at 16:46\nchar at 16:48\n* at 16:53\nIdentifier(file) at 16:54\n, at 16:58\nint at 16:60\nIdentifier(line) at 16:64\n) at 16:68\n; at 16:69\nvoid at 20:1\nIdentifier(__assert_fail) at 20:6\n( at 20:19\nchar at 20:20\n* at 20:25\nIdentifier(assertion) at 20:26\n, at 20:35\nchar at 20:37\n* at 20:42\nIdentifier(file) at 20:43\n, at 20:47\nint at 20:49\nIdentifier(line) at 20:53\n) at 20:57\n{ at 20:59\nreturn at 23:5\n; at 23:11\n} at 24:1\nint at 26:1\nIdentifier(main) at 26:5\n( at 26:9\n) at 26:10\n{ at 26:12\n( at 31:5\n( at 31:6\nIntLiteral(1, None) at 31:7\n== at 31:9\nIntLiteral(1, None) at 31:12\n) at 31:13\n? at 31:15\nIntLiteral(0, None) at 31:17\n: at 31:19\n( at 31:30\nIdentifier(__assert_fail) at 31:31\n( at 31:44\nStringLiteral(\"1 == 1\") at 31:45\n, at 31:53\nStringLiteral(\"./tests/files/assert_test.c\") at 31:55\n, at 31:84\nIntLiteral(28, None) at 31:86\n) at 31:88\n, at 31:89\nIntLiteral(0, None) at 31:91\n) at 31:92\n) at 31:93\n; at 31:94\n( at 32:5\n( at 32:6\nIntLiteral(2, None) at 32:7\n+ at 32:9\nIntLiteral(2, None) at 32:11\n== at 32:13\nIntLiteral(4, None) at 32:16\n) at 32:17\n? at 32:19\nIntLiteral(0, None) at 32:21\n: at 32:23\n( at 32:34\nIdentifier(__assert_fail) at 32:35\n( at 32:48\nStringLiteral(\"2 + 2 == 4\") at 32:49\n, at 32:61\nStringLiteral(\"./tests/files/assert_test.c\") at 32:63\n, at 32:92\nIntLiteral(29, None) at 32:94\n) at 32:96\n, at 32:97\nIntLiteral(0, None) at 32:99\n) at 32:100\n) at 32:101\n; at 32:102\nint at 35:5\nIdentifier(x) at 35:9\n= at 35:11\nIntLiteral(5, None) at 35:13\n; at 35:14\n( at 36:5\n( at 36:6\nIdentifier(x) at 36:7\n== at 36:9\nIntLiteral(5, None) at 36:12\n) at 36:13\n? at 36:15\nIntLiteral(0, None) at 36:17\n: at 36:19\n( at 36:30\nIdentifier(__assert_fail) at 36:31\n( at 36:44\nStringLiteral(\"x == 5\") at 36:45\n, at 36:53\nStringLiteral(\"./tests/files/assert_test.c\") at 36:55\n, at 36:84\nIntLiteral(33, None) at 36:86\n) at 36:88\n, at 36:89\nIntLiteral(0, None) at 36:91\n) at 36:92\n) at 36:93\n; at 36:94\nreturn at 38:5\nIntLiteral(0, None) at 38:12\n; at 38:13\n} at 39:1\nEOF at 40:1\n"
stderr: ""
status: 0
