tests/snapshots/tokenize__assignment_truncation.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nchar at 2:5\nIdentifier(c) at 2:10\n; at 2:11\nunsigned at 3:5\nchar at 3:14\nIdentifier(uc) at 3:19\n; at 3:21\nshort at 4:5\nIdentifier(s) at 4:11\n; at 4:12\nunsigned at 5:5\nshort at 5:14\nIdentifier(us) at 5:20\n; at 5:22\nreturn at 7:5\n( at 7:12\n( at 7:13\nIdentifier(c) at 7:14\n= at 7:16\nIntLiteral(255) at 7:18\n) at 7:21\n< at 7:23\nIntLiteral(0) at 7:25\n) at 7:26\n+ at 8:9\n( at 8:11\n( at 8:12\nIdentifier(uc) at 8:13\n= at 8:16\nIntLiteral(255) at 8:18\n) at 8:21\n< at 8:23\nIntLiteral(0) at 8:25\n) at 8:26\n+ at 9:9\n( at 9:11\n( at 9:12\nIdentifier(s) at 9:13\n= at 9:15\nIntLiteral(65535) at 9:17\n) at 9:22\n< at 9:24\nIntLiteral(0) at 9:26\n) at 9:27\n+ at 10:9\n( at 10:11\n( at 10:12\nIdentifier(us) at 10:13\n= at 10:16\nIntLiteral(65535) at 10:18\n) at 10:23\n< at 10:25\nIntLiteral(0) at 10:27\n) at 10:28\n; at 10:29\n} at 11:1\nEOF at 12:1\n"
stderr: ""
status: 0
