tests/snapshots/tokenize__auto_test.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 2:1\nIdentifier(main) at 2:5\n( at 2:9\n) at 2:10\n{ at 2:12\nauto at 3:5\nint at 3:10\nIdentifier(x) at 3:14\n= at 3:16\nIntLiteral(5, None) at 3:18\n; at 3:19\nauto at 4:5\nint at 4:10\nIdentifier(y) at 4:14\n= at 4:16\nIntLiteral(10, None) at 4:18\n; at 4:20\nint at 5:5\nIdentifier(z) at 5:9\n= at 5:11\nIntLiteral(15, None) at 5:13\n; at 5:15\nauto at 9:5\nint at 9:10\nIdentifier(sum) at 9:14\n= at 9:18\nIdentifier(x) at 9:20\n+ at 9:22\nIdentifier(y) at 9:24\n+ at 9:26\nIdentifier(z) at 9:28\n; at 9:29\nreturn at 11:5\nIdentifier(sum) at 11:12\n; at 11:15\n} at 12:1\nEOF at 13:1\n"
stderr: ""
status: 0
