tests/snapshots/tokenize__bitfield.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 2:1\nIdentifier(assert) at 2:6\n( at 2:12\nint at 2:13\nIdentifier(expected) at 2:17\n, at 2:25\nint at 2:27\nIdentifier(actual) at 2:31\n, at 2:37\nchar at 2:39\n* at 2:44\nIdentifier(code) at 2:45\n) at 2:49\n; at 2:50\nint at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 4:1\nIdentifier(sprintf) at 4:5\n( at 4:12\nchar at 4:13\n* at 4:18\nIdentifier(buf) at 4:19\n, at 4:22\nchar at 4:24\n* at 4:29\nIdentifier(fmt) at 4:30\n, at 4:33\n... at 4:35\n) at 4:38\n; at 4:39\nint at 5:1\nIdentifier(vsprintf) at 5:5\n( at 5:13\nchar at 5:14\n* at 5:19\nIdentifier(buf) at 5:20\n, at 5:23\nchar at 5:25\n* at 5:30\nIdentifier(fmt) at 5:31\n, at 5:34\nvoid at 5:36\n* at 5:41\nIdentifier(ap) at 5:42\n) at 5:44\n; at 5:45\nint at 6:1\nIdentifier(strcmp) at 6:5\n( at 6:11\nchar at 6:12\n* at 6:17\nIdentifier(p) at 6:18\n, at 6:19\nchar at 6:21\n* at 6:26\nIdentifier(q) at 6:27\n) at 6:28\n; at 6:29\nint at 7:1\nIdentifier(strncmp) at 7:5\n( at 7:12\nchar at 7:13\n* at 7:18\nIdentifier(p) at 7:19\n, at 7:20\nchar at 7:22\n* at 7:27\nIdentifier(q) at 7:28\n, at 7:29\nlong at 7:31\nIdentifier(n) at 7:36\n) at 7:37\n; at 7:38\nint at 8:1\nIdentifier(memcmp) at 8:5\n( at 8:11\nchar at 8:12\n* at 8:17\nIdentifier(p) at 8:18\n, at 8:19\nchar at 8:21\n* at 8:26\nIdentifier(q) at 8:27\n, at 8:28\nlong at 8:30\nIdentifier(n) at 8:35\n) at 8:36\n; at 8:37\nvoid at 9:1\nIdentifier(exit) at 9:6\n( at 9:10\nint at 9:11\nIdentifier(n) at 9:15\n) at 9:16\n; at 9:17\nint at 10:1\nIdentifier(vsprintf) at 10:5\n( at 10:13\n) at 10:14\n; at 10:15\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nstruct at 15:1\n{ at 15:8\nchar at 16:3\nIdentifier(a) at 16:8\n; at 16:9\nint at 17:3\nIdentifier(b) at 17:7\n: at 17:9\nIntLiteral(5, None) at 17:11\n; at 17:12\nint at 18:3\nIdentifier(c) at 18:7\n: at 18:9\nIntLiteral(10, None) at 18:11\n; at 18:13\n} at 19:1\nIdentifier(g45) at 19:3\n= at 19:7\n{ at 19:9\nIntLiteral(1, None) at 19:10\n, at 19:11\nIntLiteral(2, None) at 19:13\n, at 19:14\nIntLiteral(3, None) at 19:16\n} at 19:17\n, at 19:18\nIdentifier(g46) at 19:20\n= at 19:23\n{ at 19:24\n} at 19:25\n; at 19:26\nint at 21:1\nIdentifier(main) at 21:5\n( at 21:9\n) at 21:10\n{ at 21:12\nIdentifier(assert) at 22:3\n( at 22:9\nIntLiteral(4, None) at 22:10\n, at 22:11\nsizeof at 22:13\n( at 22:19\nstruct at 22:20\n{ at 22:27\nint at 22:28\nIdentifier(x) at 22:32\n: at 22:33\nIntLiteral(1, None) at 22:34\n; at 22:35\n} at 22:37\n) at 22:38\n, at 22:39\nStringLiteral(\"sizeof(struct {int 4:1; })\") at 22:41\n) at 22:69\n; at 22:70\nIdentifier(assert) at 23:3\n( at 23:9\nIntLiteral(8, None) at 23:10\n, at 23:11\nsizeof at 23:13\n( at 23:19\nstruct at 23:20\n{ at 23:27\nlong at 23:28\nIdentifier(x) at 23:33\n: at 23:34\nIntLiteral(1, None) at 23:35\n; at 23:36\n} at 23:38\n) at 23:39\n, at 23:40\nStringLiteral(\"sizeof(struct {long 8:1; })\") at 23:42\n) at 23:71\n; at 23:72\nstruct at 25:3\nIdentifier(bit1) at 25:10\n{ at 25:15\nshort at 26:5\nIdentifier(a) at 26:11\n; at 26:12\nchar at 27:5\nIdentifier(b) at 27:10\n; at 27:11\nint at 28:5\nIdentifier(c) at 28:9\n: at 28:11\nIntLiteral(2, None) at 28:13\n; at 28:14\nint at 29:5\nIdentifier(d) at 29:9\n: at 29:11\nIntLiteral(3, None) at 29:13\n; at 29:14\nint at 30:5\nIdentifier(e) at 30:9\n: at 30:11\nIntLiteral(3, None) at 30:13\n; at 30:14\n} at 31:3\n; at 31:4\nIdentifier(assert) at 33:3\n( at 33:9\nIntLiteral(4, None) at 33:10\n, at 33:11\nsizeof at 33:13\n( at 33:19\nstruct at 33:20\nIdentifier(bit1) at 33:27\n) at 33:31\n, at 33:32\nStringLiteral(\"sizeof(struct bit1)\") at 33:34\n) at 33:55\n; at 33:56\nIdentifier(assert) at 34:3\n( at 34:9\nIntLiteral(1, None) at 34:10\n, at 34:11\n( at 34:13\n{ at 34:14\nstruct at 34:16\nIdentifier(bit1) at 34:23\nIdentifier(x) at 34:28\n; at 34:29\nIdentifier(x) at 34:31\n. at 34:32\nIdentifier(a) at 34:33\n= at 34:34\nIntLiteral(1, None) at 34:35\n; at 34:36\nIdentifier(x) at 34:38\n. at 34:39\nIdentifier(b) at 34:40\n= at 34:41\nIntLiteral(2, None) at 34:42\n; at 34:43\nIdentifier(x) at 34:45\n. at 34:46\nIdentifier(c) at 34:47\n= at 34:48\nIntLiteral(3, None) at 34:49\n; at 34:50\nIdentifier(x) at 34:52\n. at 34:53\nIdentifier(d) at 34:54\n= at 34:55\nIntLiteral(4, None) at 34:56\n; at 34:57\nIdentifier(x) at 34:59\n. at 34:60\nIdentifier(e) at 34:61\n= at 34:62\nIntLiteral(5, None) at 34:63\n; at 34:64\nIdentifier(x) at 34:66\n. at 34:67\nIdentifier(a) at 34:68\n; at 34:69\n} at 34:71\n) at 34:72\n, at 34:73\nStringLiteral(\"({ struct bit1 1; 1.a=1; 1.b=2; 1.c=3; 1.d=4; 1.e=5; 1.a; })\") at 34:75\n) at 34:137\n; at 34:138\nIdentifier(assert) at 35:3\n( at 35:9\nIntLiteral(1, None) at 35:10\n, at 35:11\n( at 35:13\n{ at 35:14\nstruct at 35:16\nIdentifier(bit1) at 35:23\nIdentifier(x) at 35:28\n= at 35:29\n{ at 35:30\nIntLiteral(1, None) at 35:31\n, at 35:32\nIntLiteral(2, None) at 35:33\n, at 35:34\nIntLiteral(3, None) at 35:35\n, at 35:36\nIntLiteral(4, None) at 35:37\n, at 35:38\nIntLiteral(5, None) at 35:39\n} at 35:40\n; at 35:41\nIdentifier(x) at 35:43\n. at 35:44\nIdentifier(a) at 35:45\n; at 35:46\n} at 35:48\n) at 35:49\n, at 35:50\nStringLiteral(\"({ struct bit1 1={1,2,3,4,5}; 1.a; })\") at 35:52\n) at 35:91\n; at 35:92\nIdentifier(assert) at 36:3\n( at 36:9\nIntLiteral(2, None) at 36:10\n, at 36:11\n( at 36:13\n{ at 36:14\nstruct at 36:16\nIdentifier(bit1) at 36:23\nIdentifier(x) at 36:28\n= at 36:29\n{ at 36:30\nIntLiteral(1, None) at 36:31\n, at 36:32\nIntLiteral(2, None) at 36:33\n, at 36:34\nIntLiteral(3, None) at 36:35\n, at 36:36\nIntLiteral(4, None) at 36:37\n, at 36:38\nIntLiteral(5, None) at 36:39\n} at 36:40\n; at 36:41\nIdentifier(x) at 36:43\n. at 36:44\nIdentifier(b) at 36:45\n; at 36:46\n} at 36:48\n) at 36:49\n, at 36:50\nStringLiteral(\"({ struct bit1 2={1,2,3,4,5}; 2.b; })\") at 36:52\n) at 36:91\n; at 36:92\nIdentifier(assert) at 37:3\n( at 37:9\n- at 37:10\nIntLiteral(1, None) at 37:11\n, at 37:12\n( at 37:14\n{ at 37:15\nstruct at 37:17\nIdentifier(bit1) at 37:24\nIdentifier(x) at 37:29\n= at 37:30\n{ at 37:31\nIntLiteral(1, None) at 37:32\n, at 37:33\nIntLiteral(2, None) at 37:34\n, at 37:35\nIntLiteral(3, None) at 37:36\n, at 37:37\nIntLiteral(4, None) at 37:38\n, at 37:39\nIntLiteral(5, None) at 37:40\n} at 37:41\n; at 37:42\nIdentifier(x) at 37:44\n. at 37:45\nIdentifier(c) at 37:46\n; at 37:47\n} at 37:49\n) at 37:50\n, at 37:51\nStringLiteral(\"({ struct bit1 -1={1,2,3,4,5}; -1.c; })\") at 37:53\n) at 37:94\n; at 37:95\nIdentifier(assert) at 38:3\n( at 38:9\n- at 38:10\nIntLiteral(4, None) at 38:11\n, at 38:12\n( at 38:14\n{ at 38:15\nstruct at 38:17\nIdentifier(bit1) at 38:24\nIdentifier(x) at 38:29\n= at 38:30\n{ at 38:31\nIntLiteral(1, None) at 38:32\n, at 38:33\nIntLiteral(2, None) at 38:34\n, at 38:35\nIntLiteral(3, None) at 38:36\n, at 38:37\nIntLiteral(4, None) at 38:38\n, at 38:39\nIntLiteral(5, None) at 38:40\n} at 38:41\n; at 38:42\nIdentifier(x) at 38:44\n. at 38:45\nIdentifier(d) at 38:46\n; at 38:47\n} at 38:49\n) at 38:50\n, at 38:51\nStringLiteral(\"({ struct bit1 -4={1,2,3,4,5}; -4.d; })\") at 38:53\n) at 38:94\n; at 38:95\nIdentifier(assert) at 39:3\n( at 39:9\n- at 39:10\nIntLiteral(3, None) at 39:11\n, at 39:12\n( at 39:14\n{ at 39:15\nstruct at 39:17\nIdentifier(bit1) at 39:24\nIdentifier(x) at 39:29\n= at 39:30\n{ at 39:31\nIntLiteral(1, None) at 39:32\n, at 39:33\nIntLiteral(2, None) at 39:34\n, at 39:35\nIntLiteral(3, None) at 39:36\n, at 39:37\nIntLiteral(4, None) at 39:38\n, at 39:39\nIntLiteral(5, None) at 39:40\n} at 39:41\n; at 39:42\nIdentifier(x) at 39:44\n. at 39:45\nIdentifier(e) at 39:46\n; at 39:47\n} at 39:49\n) at 39:50\n, at 39:51\nStringLiteral(\"({ struct bit1 -3={1,2,3,4,5}; -3.e; })\") at 39:53\n) at 39:94\n; at 39:95\nIdentifier(assert) at 41:3\n( at 41:9\nIntLiteral(1, None) at 41:10\n, at 41:11\nIdentifier(g45) at 41:13\n. at 41:16\nIdentifier(a) at 41:17\n, at 41:18\nStringLiteral(\"g45.a\") at 41:20\n) at 41:27\n; at 41:28\nIdentifier(assert) at 42:3\n( at 42:9\nIntLiteral(2, None) at 42:10\n, at 42:11\nIdentifier(g45) at 42:13\n. at 42:16\nIdentifier(b) at 42:17\n, at 42:18\nStringLiteral(\"g45.b\") at 42:20\n) at 42:27\n; at 42:28\nIdentifier(assert) at 43:3\n( at 43:9\nIntLiteral(3, None) at 43:10\n, at 43:11\nIdentifier(g45) at 43:13\n. at 43:16\nIdentifier(c) at 43:17\n, at 43:18\nStringLiteral(\"g45.c\") at 43:20\n) at 43:27\n; at 43:28\nIdentifier(assert) at 45:3\n( at 45:9\nIntLiteral(0, None) at 45:10\n, at 45:11\nIdentifier(g46) at 45:13\n. at 45:16\nIdentifier(a) at 45:17\n, at 45:18\nStringLiteral(\"g46.a\") at 45:20\n) at 45:27\n; at 45:28\nIdentifier(assert) at 46:3\n( at 46:9\nIntLiteral(0, None) at 46:10\n, at 46:11\nIdentifier(g46) at 46:13\n. at 46:16\nIdentifier(b) at 46:17\n, at 46:18\nStringLiteral(\"g46.b\") at 46:20\n) at 46:27\n; at 46:28\nIdentifier(assert) at 47:3\n( at 47:9\nIntLiteral(0, None) at 47:10\n, at 47:11\nIdentifier(g46) at 47:13\n. at 47:16\nIdentifier(c) at 47:17\n, at 47:18\nStringLiteral(\"g46.c\") at 47:20\n) at 47:27\n; at 47:28\ntypedef at 49:3\nstruct at 49:11\n{ at 49:18\nint at 50:5\nIdentifier(a) at 50:9\n: at 50:11\nIntLiteral(10, None) at 50:13\n; at 50:15\nint at 51:5\nIdentifier(b) at 51:9\n: at 51:11\nIntLiteral(10, None) at 51:13\n; at 51:15\nint at 52:5\nIdentifier(c) at 52:9\n: at 52:11\nIntLiteral(10, None) at 52:13\n; at 52:15\n} at 53:3\nIdentifier(T3) at 53:5\n; at 53:7\nIdentifier(assert) at 55:3\n( at 55:9\nIntLiteral(1, None) at 55:10\n, at 55:11\n( at 55:13\n{ at 55:14\nIdentifier(T3) at 55:16\nIdentifier(x) at 55:19\n= at 55:20\n{ at 55:21\nIntLiteral(1, None) at 55:22\n, at 55:23\nIntLiteral(2, None) at 55:24\n, at 55:25\nIntLiteral(3, None) at 55:26\n} at 55:27\n; at 55:28\nIdentifier(x) at 55:30\n. at 55:31\nIdentifier(a) at 55:32\n++ at 55:33\n; at 55:35\n} at 55:37\n) at 55:38\n, at 55:39\nStringLiteral(\"({ T3 1={1,2,3}; 1.a++; })\") at 55:41\n) at 55:69\n; at 55:70\nIdentifier(assert) at 56:3\n( at 56:9\nIntLiteral(2, None) at 56:10\n, at 56:11\n( at 56:13\n{ at 56:14\nIdentifier(T3) at 56:16\nIdentifier(x) at 56:19\n= at 56:20\n{ at 56:21\nIntLiteral(1, None) at 56:22\n, at 56:23\nIntLiteral(2, None) at 56:24\n, at 56:25\nIntLiteral(3, None) at 56:26\n} at 56:27\n; at 56:28\nIdentifier(x) at 56:30\n. at 56:31\nIdentifier(b) at 56:32\n++ at 56:33\n; at 56:35\n} at 56:37\n) at 56:38\n, at 56:39\nStringLiteral(\"({ T3 2={1,2,3}; 2.b++; })\") at 56:41\n) at 56:69\n; at 56:70\nIdentifier(assert) at 57:3\n( at 57:9\nIntLiteral(3, None) at 57:10\n, at 57:11\n( at 57:13\n{ at 57:14\nIdentifier(T3) at 57:16\nIdentifier(x) at 57:19\n= at 57:20\n{ at 57:21\nIntLiteral(1, None) at 57:22\n, at 57:23\nIntLiteral(2, None) at 57:24\n, at 57:25\nIntLiteral(3, None) at 57:26\n} at 57:27\n; at 57:28\nIdentifier(x) at 57:30\n. at 57:31\nIdentifier(c) at 57:32\n++ at 57:33\n; at 57:35\n} at 57:37\n) at 57:38\n, at 57:39\nStringLiteral(\"({ T3 3={1,2,3}; 3.c++; })\") at 57:41\n) at 57:69\n; at 57:70\nIdentifier(assert) at 59:3\n( at 59:9\nIntLiteral(2, None) at 59:10\n, at 59:11\n( at 59:13\n{ at 59:14\nIdentifier(T3) at 59:16\nIdentifier(x) at 59:19\n= at 59:20\n{ at 59:21\nIntLiteral(1, None) at 59:22\n, at 59:23\nIntLiteral(2, None) at 59:24\n, at 59:25\nIntLiteral(3, None) at 59:26\n} at 59:27\n; at 59:28\n++ at 59:30\nIdentifier(x) at 59:32\n. at 59:33\nIdentifier(a) at 59:34\n; at 59:35\n} at 59:37\n) at 59:38\n, at 59:39\nStringLiteral(\"({ T3 2={1,2,3}; ++2.a; })\") at 59:41\n) at 59:69\n; at 59:70\nIdentifier(assert) at 60:3\n( at 60:9\nIntLiteral(3, None) at 60:10\n, at 60:11\n( at 60:13\n{ at 60:14\nIdentifier(T3) at 60:16\nIdentifier(x) at 60:19\n= at 60:20\n{ at 60:21\nIntLiteral(1, None) at 60:22\n, at 60:23\nIntLiteral(2, None) at 60:24\n, at 60:25\nIntLiteral(3, None) at 60:26\n} at 60:27\n; at 60:28\n++ at 60:30\nIdentifier(x) at 60:32\n. at 60:33\nIdentifier(b) at 60:34\n; at 60:35\n} at 60:37\n) at 60:38\n, at 60:39\nStringLiteral(\"({ T3 3={1,2,3}; ++3.b; })\") at 60:41\n) at 60:69\n; at 60:70\nIdentifier(assert) at 61:3\n( at 61:9\nIntLiteral(4, None) at 61:10\n, at 61:11\n( at 61:13\n{ at 61:14\nIdentifier(T3) at 61:16\nIdentifier(x) at 61:19\n= at 61:20\n{ at 61:21\nIntLiteral(1, None) at 61:22\n, at 61:23\nIntLiteral(2, None) at 61:24\n, at 61:25\nIntLiteral(3, None) at 61:26\n} at 61:27\n; at 61:28\n++ at 61:30\nIdentifier(x) at 61:32\n. at 61:33\nIdentifier(c) at 61:34\n; at 61:35\n} at 61:37\n) at 61:38\n, at 61:39\nStringLiteral(\"({ T3 4={1,2,3}; ++4.c; })\") at 61:41\n) at 61:69\n; at 61:70\nIdentifier(assert) at 63:3\n( at 63:9\nIntLiteral(4, None) at 63:10\n, at 63:11\nsizeof at 63:13\n( at 63:19\nstruct at 63:20\n{ at 63:27\nint at 63:28\nIdentifier(a) at 63:32\n: at 63:33\nIntLiteral(3, None) at 63:34\n; at 63:35\nint at 63:37\nIdentifier(c) at 63:41\n: at 63:42\nIntLiteral(1, None) at 63:43\n; at 63:44\nint at 63:46\nIdentifier(c) at 63:50\n: at 63:51\nIntLiteral(5, None) at 63:52\n; at 63:53\n} at 63:54\n) at 63:55\n, at 63:56\nStringLiteral(\"sizeof(struct {int a:3; int c:1; int c:5;})\") at 63:58\n) at 63:103\n; at 63:104\nIdentifier(assert) at 64:3\n( at 64:9\nIntLiteral(8, None) at 64:10\n, at 64:11\nsizeof at 64:13\n( at 64:19\nstruct at 64:20\n{ at 64:27\nint at 64:28\nIdentifier(a) at 64:32\n: at 64:33\nIntLiteral(3, None) at 64:34\n; at 64:35\nint at 64:37\n: at 64:40\nIntLiteral(0, None) at 64:41\n; at 64:42\nint at 64:44\nIdentifier(c) at 64:48\n: at 64:49\nIntLiteral(5, None) at 64:50\n; at 64:51\n} at 64:52\n) at 64:53\n, at 64:54\nStringLiteral(\"sizeof(struct {int a:3; int:0; int c:5;})\") at 64:56\n) at 64:99\n; at 64:100\nIdentifier(assert) at 65:3\n( at 65:9\nIntLiteral(4, None) at 65:10\n, at 65:11\nsizeof at 65:13\n( at 65:19\nstruct at 65:20\n{ at 65:27\nint at 65:28\nIdentifier(a) at 65:32\n: at 65:33\nIntLiteral(3, None) at 65:34\n; at 65:35\nint at 65:37\n: at 65:40\nIntLiteral(0, None) at 65:41\n; at 65:42\n} at 65:43\n) at 65:44\n, at 65:45\nStringLiteral(\"sizeof(struct {int a:3; int:0;})\") at 65:47\n) at 65:81\n; at 65:82\nIdentifier(printf) at 67:3\n( at 67:9\nStringLiteral(\"OK\n\") at 67:10\n) at 67:16\n; at 67:17\nreturn at 68:3\nIntLiteral(0, None) at 68:10\n; at 68:11\n} at 69:1\nEOF at 70:1\n"
stderr: ""
status: 0
