tests/snapshots/tokenize__bitfield_test.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "struct at 3:1\nIdentifier(Flags) at 3:8\n{ at 3:14\nunsigned at 4:5\nint at 4:14\nIdentifier(flag1) at 4:18\n: at 4:24\nIntLiteral(1, None) at 4:26\n; at 4:27\nunsigned at 5:5\nint at 5:14\nIdentifier(flag2) at 5:18\n: at 5:24\nIntLiteral(1, None) at 5:26\n; at 5:27\nunsigned at 6:5\nint at 6:14\nIdentifier(value) at 6:18\n: at 6:24\nIntLiteral(4, None) at 6:26\n; at 6:27\nunsigned at 7:5\nint at 7:14\nIdentifier(padding) at 7:18\n: at 7:26\nIntLiteral(26, None) at 7:28\n; at 7:30\n} at 8:1\n; at 8:2\nint at 10:1\nIdentifier(main) at 10:5\n( at 10:9\n) at 10:10\n{ at 10:12\nstruct at 11:5\nIdentifier(Flags) at 11:12\nIdentifier(f) at 11:18\n; at 11:19\nIdentifier(f) at 14:5\n. at 14:6\nIdentifier(flag1) at 14:7\n= at 14:13\nIntLiteral(1, None) at 14:15\n; at 14:16\nIdentifier(f) at 15:5\n. at 15:6\nIdentifier(flag2) at 15:7\n= at 15:13\nIntLiteral(0, None) at 15:15\n; at 15:16\nIdentifier(f) at 16:5\n. at 16:6\nIdentifier(value) at 16:7\n= at 16:13\nIntLiteral(5, None) at 16:15\n; at 16:16\nint at 19:5\nIdentifier(result) at 19:9\n= at 19:16\nIntLiteral(0, None) at 19:18\n; at 19:19\nif at 20:5\n( at 20:8\nIdentifier(f) at 20:9\n. at 20:10\nIdentifier(flag1) at 20:11\n== at 20:17\nIntLiteral(1, None) at 20:20\n) at 20:21\n{ at 20:23\nIdentifier(result) at 21:9\n= at 21:16\nIdentifier(result) at 21:18\n+ at 21:25\nIntLiteral(1, None) at 21:27\n; at 21:28\n} at 22:5\nif at 23:5\n( at 23:8\nIdentifier(f) at 23:9\n. at 23:10\nIdentifier(flag2) at 23:11\n== at 23:17\nIntLiteral(0, None) at 23:20\n) at 23:21\n{ at 23:23\nIdentifier(result) at 24:9\n= at 24:16\nIdentifier(result) at 24:18\n+ at 24:25\nIntLiteral(1, None) at 24:27\n; at 24:28\n} at 25:5\nif at 26:5\n( at 26:8\nIdentifier(f) at 26:9\n. at 26:10\nIdentifier(value) at 26:11\n== at 26:17\nIntLiteral(5, None) at 26:20\n) at 26:21\n{ at 26:23\nIdentifier(result) at 27:9\n= at 27:16\nIdentifier(result) at 27:18\n+ at 27:25\nIntLiteral(1, None) at 27:27\n; at 27:28\n} at 28:5\nreturn at 31:5\nIdentifier(result) at 31:12\n; at 31:18\n} at 32:1\nEOF at 33:1\n"
stderr: ""
status: 0
