tests/snapshots/tokenize__bitwise_ops.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 1:1\nIdentifier(main) at 1:5\n( at 1:9\n) at 1:10\n{ at 1:12\nint at 2:5\nIdentifier(a) at 2:9\n= at 2:11\nIntLiteral(90, None) at 2:13\n; at 2:15\nint at 3:5\nIdentifier(b) at 3:9\n= at 3:11\nIntLiteral(15, None) at 3:13\n; at 3:15\nunsigned at 4:5\nint at 4:14\nIdentifier(ua) at 4:18\n= at 4:21\nIntLiteral(240, None) at 4:23\n; at 4:26\nunsigned at 5:5\nint at 5:14\nIdentifier(ub) at 5:18\n= at 5:21\nIntLiteral(15, None) at 5:23\n; at 5:25\nint at 7:5\nIdentifier(r1) at 7:9\n= at 7:12\nIdentifier(a) at 7:14\n& at 7:16\nIdentifier(b) at 7:18\n; at 7:19\nint at 8:5\nIdentifier(r2) at 8:9\n= at 8:12\nIdentifier(a) at 8:14\n| at 8:16\nIdentifier(b) at 8:18\n; at 8:19\nint at 9:5\nIdentifier(r3) at 9:9\n= at 9:12\nIdentifier(a) at 9:14\n^ at 9:16\nIdentifier(b) at 9:18\n; at 9:19\nunsigned at 10:5\nint at 10:14\nIdentifier(r4) at 10:18\n= at 10:21\nIdentifier(ua) at 10:23\n& at 10:26\nIdentifier(ub) at 10:28\n; at 10:30\nunsigned at 11:5\nint at 11:14\nIdentifier(r5) at 11:18\n= at 11:21\nIdentifier(ua) at 11:23\n| at 11:26\nIdentifier(ub) at 11:28\n; at 11:30\nunsigned at 12:5\nint at 12:14\nIdentifier(r6) at 12:18\n= at 12:21\nIdentifier(ua) at 12:23\n^ at 12:26\nIdentifier(ub) at 12:28\n; at 12:30\nreturn at 14:5\n( at 14:12\nIdentifier(r1) at 14:13\n+ at 14:16\nIdentifier(r2) at 14:18\n+ at 14:21\nIdentifier(r3) at 14:23\n+ at 14:26\nIdentifier(r4) at 14:28\n+ at 14:31\nIdentifier(r5) at 14:33\n+ at 14:36\nIdentifier(r6) at 14:38\n) at 14:40\n& at 14:42\nIntLiteral(255, None) at 14:44\n; at 14:47\n} at 15:1\nEOF at 16:1\n"
stderr: ""
status: 0
