tests/snapshots/tokenize__break_continue_nested.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 4:1\nIdentifier(main) at 4:5\n( at 4:9\n) at 4:10\n{ at 4:12\nint at 5:5\nIdentifier(sum) at 5:9\n= at 5:13\nIntLiteral(0) at 5:15\n; at 5:16\nfor at 7:5\n( at 7:9\nint at 7:10\nIdentifier(i) at 7:14\n= at 7:16\nIntLiteral(0) at 7:18\n; at 7:19\nIdentifier(i) at 7:21\n< at 7:23\nIntLiteral(5) at 7:25\n; at 7:26\nIdentifier(i) at 7:28\n++ at 7:29\n) at 7:31\n{ at 7:33\nfor at 8:9\n( at 8:13\nint at 8:14\nIdentifier(j) at 8:18\n= at 8:20\nIntLiteral(0) at 8:22\n; at 8:23\nIdentifier(j) at 8:25\n< at 8:27\nIntLiteral(5) at 8:29\n; at 8:30\nIdentifier(j) at 8:32\n++ at 8:33\n) at 8:35\n{ at 8:37\nif at 9:13\n( at 9:16\nIdentifier(j) at 9:17\n== at 9:19\nIntLiteral(3) at 9:22\n) at 9:23\n{ at 9:25\nbreak at 10:17\n; at 10:22\n} at 11:13\nif at 12:13\n( at 12:16\nIdentifier(j) at 12:17\n% at 12:19\nIntLiteral(2) at 12:21\n== at 12:23\nIntLiteral(0) at 12:26\n) at 12:27\n{ at 12:29\ncontinue at 13:17\n; at 13:25\n} at 14:13\nIdentifier(sum) at 15:13\n+= at 15:17\nIdentifier(i) at 15:20\n* at 15:22\nIntLiteral(10) at 15:24\n+ at 15:27\nIdentifier(j) at 15:29\n; at 15:30\n} at 16:9\n} at 17:5\nreturn at 23:5\nIdentifier(sum) at 23:12\n; at 23:15\n} at 24:1\nEOF at 25:1\n"
stderr: ""
status: 0
