tests/snapshots/tokenize__break_for.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "int at 4:1\nIdentifier(main) at 4:5\n( at 4:9\n) at 4:10\n{ at 4:12\nint at 5:5\nIdentifier(sum) at 5:9\n= at 5:13\nIntLiteral(0, None) at 5:15\n; at 5:16\nfor at 7:5\n( at 7:9\nint at 7:10\nIdentifier(i) at 7:14\n= at 7:16\nIntLiteral(0, None) at 7:18\n; at 7:19\nIdentifier(i) at 7:21\n< at 7:23\nIntLiteral(10, None) at 7:25\n; at 7:27\nIdentifier(i) at 7:29\n++ at 7:30\n) at 7:32\n{ at 7:34\nif at 8:9\n( at 8:12\nIdentifier(i) at 8:13\n== at 8:15\nIntLiteral(7, None) at 8:18\n) at 8:19\n{ at 8:21\nbreak at 9:13\n; at 9:18\n} at 10:9\nIdentifier(sum) at 11:9\n+= at 11:13\nIdentifier(i) at 11:16\n; at 11:17\n} at 12:5\nreturn at 15:5\nIdentifier(sum) at 15:12\n; at 15:15\n} at 16:1\nEOF at 17:1\n"
stderr: ""
status: 0
