tests/snapshots/tokenize__builtin.snap
---
source: tests/tokenize.rs
expression: "&result"
---
stdout: "void at 2:1\nIdentifier(assert) at 2:6\n( at 2:12\nint at 2:13\nIdentifier(expected) at 2:17\n, at 2:25\nint at 2:27\nIdentifier(actual) at 2:31\n, at 2:37\nchar at 2:39\n* at 2:44\nIdentifier(code) at 2:45\n) at 2:49\n; at 2:50\nint at 3:1\nIdentifier(printf) at 3:5\n( at 3:11\nchar at 3:12\n* at 3:17\nIdentifier(fmt) at 3:18\n, at 3:21\n... at 3:23\n) at 3:26\n; at 3:27\nint at 4:1\nIdentifier(sprintf) at 4:5\n( at 4:12\nchar at 4:13\n* at 4:18\nIdentifier(buf) at 4:19\n, at 4:22\nchar at 4:24\n* at 4:29\nIdentifier(fmt) at 4:30\n, at 4:33\n... at 4:35\n) at 4:38\n; at 4:39\nint at 5:1\nIdentifier(vsprintf) at 5:5\n( at 5:13\nchar at 5:14\n* at 5:19\nIdentifier(buf) at 5:20\n, at 5:23\nchar at 5:25\n* at 5:30\nIdentifier(fmt) at 5:31\n, at 5:34\nvoid at 5:36\n* at 5:41\nIdentifier(ap) at 5:42\n) at 5:44\n; at 5:45\nint at 6:1\nIdentifier(strcmp) at 6:5\n( at 6:11\nchar at 6:12\n* at 6:17\nIdentifier(p) at 6:18\n, at 6:19\nchar at 6:21\n* at 6:26\nIdentifier(q) at 6:27\n) at 6:28\n; at 6:29\nint at 7:1\nIdentifier(strncmp) at 7:5\n( at 7:12\nchar at 7:13\n* at 7:18\nIdentifier(p) at 7:19\n, at 7:20\nchar at 7:22\n* at 7:27\nIdentifier(q) at 7:28\n, at 7:29\nlong at 7:31\nIdentifier(n) at 7:36\n) at 7:37\n; at 7:38\nint at 8:1\nIdentifier(memcmp) at 8:5\n( at 8:11\nchar at 8:12\n* at 8:17\nIdentifier(p) at 8:18\n, at 8:19\nchar at 8:21\n* at 8:26\nIdentifier(q) at 8:27\n, at 8:28\nlong at 8:30\nIdentifier(n) at 8:35\n) at 8:36\n; at 8:37\nvoid at 9:1\nIdentifier(exit) at 9:6\n( at 9:10\nint at 9:11\nIdentifier(n) at 9:15\n) at 9:16\n; at 9:17\nint at 10:1\nIdentifier(vsprintf) at 10:5\n( at 10:13\n) at 10:14\n; at 10:15\nlong at 11:1\nIdentifier(strlen) at 11:6\n( at 11:12\nchar at 11:13\n* at 11:18\nIdentifier(s) at 11:19\n) at 11:20\n; at 11:21\nvoid at 12:1\n* at 12:6\nIdentifier(memcpy) at 12:7\n( at 12:13\nvoid at 12:14\n* at 12:19\nIdentifier(dest) at 12:20\n, at 12:24\nvoid at 12:26\n* at 12:31\nIdentifier(src) at 12:32\n, at 12:35\nlong at 12:37\nIdentifier(n) at 12:42\n) at 12:43\n; at 12:44\nvoid at 13:1\n* at 13:6\nIdentifier(memset) at 13:7\n( at 13:13\nvoid at 13:14\n* at 13:19\nIdentifier(s) at 13:20\n, at 13:21\nint at 13:23\nIdentifier(c) at 13:27\n, at 13:28\nlong at 13:30\nIdentifier(n) at 13:35\n) at 13:36\n; at 13:37\nint at 15:1\nIdentifier(main) at 15:5\n( at 15:9\n) at 15:10\n{ at 15:12\nIdentifier(assert) at 16:3\n( at 16:9\nIntLiteral(1, None) at 16:10\n, at 16:11\nIdentifier(__builtin_types_compatible_p) at 16:13\n( at 16:41\nint at 16:42\n, at 16:45\nint at 16:47\n) at 16:50\n, at 16:51\nStringLiteral(\"__builtin_types_compatible_p(int, int)\") at 16:53\n) at 16:93\n; at 16:94\nIdentifier(assert) at 17:3\n( at 17:9\nIntLiteral(1, None) at 17:10\n, at 17:11\nIdentifier(__builtin_types_compatible_p) at 17:13\n( at 17:41\ndouble at 17:42\n, at 17:48\ndouble at 17:50\n) at 17:56\n, at 17:57\nStringLiteral(\"__builtin_types_compatible_p(double, double)\") at 17:59\n) at 17:105\n; at 17:106\nIdentifier(assert) at 18:3\n( at 18:9\nIntLiteral(0, None) at 18:10\n, at 18:11\nIdentifier(__builtin_types_compatible_p) at 18:13\n( at 18:41\nint at 18:42\n, at 18:45\nlong at 18:47\n) at 18:51\n, at 18:52\nStringLiteral(\"__builtin_types_compatible_p(int, long)\") at 18:54\n) at 18:95\n; at 18:96\nIdentifier(assert) at 19:3\n( at 19:9\nIntLiteral(0, None) at 19:10\n, at 19:11\nIdentifier(__builtin_types_compatible_p) at 19:13\n( at 19:41\nlong at 19:42\n, at 19:46\nfloat at 19:48\n) at 19:53\n, at 19:54\nStringLiteral(\"__builtin_types_compatible_p(long, float)\") at 19:56\n) at 19:99\n; at 19:100\nIdentifier(assert) at 20:3\n( at 20:9\nIntLiteral(1, None) at 20:10\n, at 20:11\nIdentifier(__builtin_types_compatible_p) at 20:13\n( at 20:41\nint at 20:42\n* at 20:46\n, at 20:47\nint at 20:49\n* at 20:53\n) at 20:54\n, at 20:55\nStringLiteral(\"__builtin_types_compatible_p(int *, int *)\") at 20:57\n) at 20:101\n; at 20:102\nIdentifier(assert) at 21:3\n( at 21:9\nIntLiteral(0, None) at 21:10\n, at 21:11\nIdentifier(__builtin_types_compatible_p) at 21:13\n( at 21:41\nshort at 21:42\n* at 21:48\n, at 21:49\nint at 21:51\n* at 21:55\n) at 21:56\n, at 21:57\nStringLiteral(\"__builtin_types_compatible_p(short *, int *)\") at 21:59\n) at 21:105\n; at 21:106\nIdentifier(assert) at 22:3\n( at 22:9\nIntLiteral(0, None) at 22:10\n, at 22:11\nIdentifier(__builtin_types_compatible_p) at 22:13\n( at 22:41\nint at 22:42\n* at 22:46\n* at 22:47\n, at 22:48\nint at 22:50\n* at 22:54\n) at 22:55\n, at 22:56\nStringLiteral(\"__builtin_types_compatible_p(int **, int *)\") at 22:58\n) at 22:103\n; at 22:104\nIdentifier(assert) at 23:3\n( at 23:9\nIntLiteral(1, None) at 23:10\n, at 23:11\nIdentifier(__builtin_types_compatible_p) at 23:13\n( at 23:41\nconst at 23:42\nint at 23:48\n, at 23:51\nint at 23:53\n) at 23:56\n, at 23:57\nStringLiteral(\"__builtin_types_compatible_p(const int, int)\") at 23:59\n) at 23:105\n; at 23:106\nIdentifier(assert) at 24:3\n( at 24:9\nIntLiteral(0, None) at 24:10\n, at 24:11\nIdentifier(__builtin_types_compatible_p) at 24:13\n( at 24:41\nunsigned at 24:42\n, at 24:50\nint at 24:52\n) at 24:55\n, at 24:56\nStringLiteral(\"__builtin_types_compatible_p(unsigned, int)\") at 24:58\n) at 24:103\n; at 24:104\nIdentifier(assert) at 25:3\n( at 25:9\nIntLiteral(1, None) at 25:10\n, at 25:11\nIdentifier(__builtin_types_compatible_p) at 25:13\n( at 25:41\nIdentifier(signed) at 25:42\n, at 25:48\nint at 25:50\n) at 25:53\n, at 25:54\nStringLiteral(\"__builtin_types_compatible_p(signed, int)\") at 25:56\n) at 25:99\n; at 25:100\nIdentifier(assert) at 26:3\n( at 26:9\nIntLiteral(0, None) at 26:10\n, at 26:11\nIdentifier(__builtin_types_compatible_p) at 26:13\n( at 26:41\nstruct at 26:42\n{ at 26:49\nint at 26:50\nIdentifier(a) at 26:54\n; at 26:55\n} at 26:56\n, at 26:57\nstruct at 26:59\n{ at 26:66\nint at 26:67\nIdentifier(a) at 26:71\n; at 26:72\n} at 26:73\n) at 26:74\n, at 26:75\nStringLiteral(\"__builtin_types_compatible_p(struct {int a;}, struct {int a;})\") at 26:77\n) at 26:141\n; at 26:142\nIdentifier(assert) at 28:3\n( at 28:9\nIntLiteral(1, None) at 28:10\n, at 28:11\nIdentifier(__builtin_types_compatible_p) at 28:13\n( at 28:41\nint at 28:42\n( at 28:46\n* at 28:47\n) at 28:48\n( at 28:49\nvoid at 28:50\n) at 28:54\n, at 28:55\nint at 28:57\n( at 28:61\n* at 28:62\n) at 28:63\n( at 28:64\nvoid at 28:65\n) at 28:69\n) at 28:70\n, at 28:71\nStringLiteral(\"__builtin_types_compatible_p(int (*)(void), int (*)(void))\") at 28:73\n) at 28:133\n; at 28:134\nIdentifier(assert) at 29:3\n( at 29:9\nIntLiteral(1, None) at 29:10\n, at 29:11\nIdentifier(__builtin_types_compatible_p) at 29:13\n( at 29:41\nvoid at 29:42\n( at 29:47\n* at 29:48\n) at 29:49\n( at 29:50\nint at 29:51\n) at 29:54\n, at 29:55\nvoid at 29:57\n( at 29:62\n* at 29:63\n) at 29:64\n( at 29:65\nint at 29:66\n) at 29:69\n) at 29:70\n, at 29:71\nStringLiteral(\"__builtin_types_compatible_p(void (*)(int), void (*)(int))\") at 29:73\n) at 29:133\n; at 29:134\nIdentifier(assert) at 30:3\n( at 30:9\nIntLiteral(1, None) at 30:10\n, at 30:11\nIdentifier(__builtin_types_compatible_p) at 30:13\n( at 30:41\nvoid at 30:42\n( at 30:47\n* at 30:48\n) at 30:49\n( at 30:50\nint at 30:51\n, at 30:54\ndouble at 30:56\n) at 30:62\n, at 30:63\nvoid at 30:65\n( at 30:70\n* at 30:71\n) at 30:72\n( at 30:73\nint at 30:74\n, at 30:77\ndouble at 30:79\n) at 30:85\n) at 30:86\n, at 30:87\nStringLiteral(\"__builtin_types_compatible_p(void (*)(int, double), void (*)(int, double))\") at 30:89\n) at 30:165\n; at 30:166\nIdentifier(assert) at 31:3\n( at 31:9\nIntLiteral(1, None) at 31:10\n, at 31:11\nIdentifier(__builtin_types_compatible_p) at 31:13\n( at 31:41\nint at 31:42\n( at 31:46\n* at 31:47\n) at 31:48\n( at 31:49\nfloat at 31:50\n, at 31:55\ndouble at 31:57\n) at 31:63\n, at 31:64\nint at 31:66\n( at 31:70\n* at 31:71\n) at 31:72\n( at 31:73\nfloat at 31:74\n, at 31:79\ndouble at 31:81\n) at 31:87\n) at 31:88\n, at 31:89\nStringLiteral(\"__builtin_types_compatible_p(int (*)(float, double), int (*)(float, double))\") at 31:91\n) at 31:169\n; at 31:170\nIdentifier(assert) at 32:3\n( at 32:9\nIntLiteral(0, None) at 32:10\n, at 32:11\nIdentifier(__builtin_types_compatible_p) at 32:13\n( at 32:41\nint at 32:42\n( at 32:46\n* at 32:47\n) at 32:48\n( at 32:49\nfloat at 32:50\n, at 32:55\ndouble at 32:57\n) at 32:63\n, at 32:64\nint at 32:66\n) at 32:69\n, at 32:70\nStringLiteral(\"__builtin_types_compatible_p(int (*)(float, double), int)\") at 32:72\n) at 32:131\n; at 32:132\nIdentifier(assert) at 33:3\n( at 33:9\nIntLiteral(0, None) at 33:10\n, at 33:11\nIdentifier(__builtin_types_compatible_p) at 33:13\n( at 33:41\nint at 33:42\n( at 33:46\n* at 33:47\n) at 33:48\n( at 33:49\nfloat at 33:50\n, at 33:55\ndouble at 33:57\n) at 33:63\n, at 33:64\nint at 33:66\n( at 33:70\n* at 33:71\n) at 33:72\n( at 33:73\nfloat at 33:74\n) at 33:79\n) at 33:80\n, at 33:81\nStringLiteral(\"__builtin_types_compatible_p(int (*)(float, double), int (*)(float))\") at 33:83\n) at 33:153\n; at 33:154\nIdentifier(assert) at 34:3\n( at 34:9\nIntLiteral(0, None) at 34:10\n, at 34:11\nIdentifier(__builtin_types_compatible_p) at 34:13\n( at 34:41\nint at 34:42\n( at 34:46\n* at 34:47\n) at 34:48\n( at 34:49\nfloat at 34:50\n, at 34:55\ndouble at 34:57\n) at 34:63\n, at 34:64\nint at 34:66\n( at 34:70\n* at 34:71\n) at 34:72\n( at 34:73\nfloat at 34:74\n, at 34:79\ndouble at 34:81\n, at 34:87\nint at 34:89\n) at 34:92\n) at 34:93\n, at 34:94\nStringLiteral(\"__builtin_types_compatible_p(int (*)(float, double), int (*)(float, double, int))\") at 34:96\n) at 34:179\n; at 34:180\nIdentifier(assert) at 35:3\n( at 35:9\nIntLiteral(1, None) at 35:10\n, at 35:11\nIdentifier(__builtin_types_compatible_p) at 35:13\n( at 35:41\ndouble at 35:42\n( at 35:49\n* at 35:50\n) at 35:51\n( at 35:52\n... at 35:53\n) at 35:56\n, at 35:57\ndouble at 35:59\n( at 35:66\n* at 35:67\n) at 35:68\n( at 35:69\n... at 35:70\n) at 35:73\n) at 35:74\n, at 35:75\nStringLiteral(\"__builtin_types_compatible_p(double (*)(...), double (*)(...))\") at 35:77\n) at 35:141\n; at 35:142\nIdentifier(assert) at 36:3\n( at 36:9\nIntLiteral(0, None) at 36:10\n, at 36:11\nIdentifier(__builtin_types_compatible_p) at 36:13\n( at 36:41\ndouble at 36:42\n( at 36:49\n* at 36:50\n) at 36:51\n( at 36:52\n... at 36:53\n) at 36:56\n, at 36:57\ndouble at 36:59\n( at 36:66\n* at 36:67\n) at 36:68\n( at 36:69\nvoid at 36:70\n) at 36:74\n) at 36:75\n, at 36:76\nStringLiteral(\"__builtin_types_compatible_p(double (*)(...), double (*)(void))\") at 36:78\n) at 36:143\n; at 36:144\nIdentifier(assert) at 38:3\n( at 38:9\nIntLiteral(1, None) at 38:10\n, at 38:11\n( at 38:13\n{ at 38:14\ntypedef at 38:16\nstruct at 38:24\n{ at 38:31\nint at 38:32\nIdentifier(a) at 38:36\n; at 38:37\n} at 38:38\nIdentifier(T) at 38:40\n; at 38:41\nIdentifier(__builtin_types_compatible_p) at 38:43\n( at 38:71\nIdentifier(T) at 38:72\n, at 38:73\nIdentifier(T) at 38:75\n) at 38:76\n; at 38:77\n} at 38:79\n) at 38:80\n, at 38:81\nStringLiteral(\"({ typedef struct {int a;} T; __builtin_types_compatible_p(T, T); })\") at 38:83\n) at 38:153\n; at 38:154\nIdentifier(assert) at 39:3\n( at 39:9\nIntLiteral(1, None) at 39:10\n, at 39:11\n( at 39:13\n{ at 39:14\ntypedef at 39:16\nstruct at 39:24\n{ at 39:31\nint at 39:32\nIdentifier(a) at 39:36\n; at 39:37\n} at 39:38\nIdentifier(T) at 39:40\n; at 39:41\nIdentifier(__builtin_types_compatible_p) at 39:43\n( at 39:71\nIdentifier(T) at 39:72\n, at 39:73\nconst at 39:75\nIdentifier(T) at 39:81\n) at 39:82\n; at 39:83\n} at 39:85\n) at 39:86\n, at 39:87\nStringLiteral(\"({ typedef struct {int a;} T; __builtin_types_compatible_p(T, const T); })\") at 39:89\n) at 39:165\n; at 39:166\nIdentifier(assert) at 41:3\n( at 41:9\nIntLiteral(1, None) at 41:10\n, at 41:11\n( at 41:13\n{ at 41:14\nstruct at 41:16\n{ at 41:23\nint at 41:24\nIdentifier(a) at 41:28\n; at 41:29\nint at 41:31\nIdentifier(b) at 41:35\n; at 41:36\n} at 41:37\nIdentifier(x) at 41:39\n; at 41:40\nIdentifier(__builtin_types_compatible_p) at 41:42\n( at 41:70\nIdentifier(typeof) at 41:71\n( at 41:77\nIdentifier(x) at 41:78\n. at 41:79\nIdentifier(a) at 41:80\n) at 41:81\n, at 41:82\nIdentifier(typeof) at 41:84\n( at 41:90\nIdentifier(x) at 41:91\n. at 41:92\nIdentifier(b) at 41:93\n) at 41:94\n) at 41:95\n; at 41:96\n} at 41:98\n) at 41:99\n, at 41:100\nStringLiteral(\"({ struct {int a; int b;} 1; __builtin_types_compatible_p(typeof(1.a), typeof(1.b)); })\") at 41:102\n) at 41:191\n; at 41:192\nIdentifier(printf) at 43:3\n( at 43:9\nStringLiteral(\"OK\n\") at 43:10\n) at 43:16\n; at 43:17\nreturn at 44:3\nIntLiteral(0, None) at 44:10\n; at 44:11\n} at 45:1\nEOF at 46:1\n"
stderr: ""
status: 0
